# project-templates

./: .gitignore  CivetServer_8cpp.html  CivetServer_8h_source.html  LuaXML__lib_8c.js  LuaXML__lib_8c_source.html  LuaXML__lib_8h_source.html  README.md  abort_8h.js  abort_8h_source.html  all_8c.html  all_8c.js  alloc_8h.html  asprintf-compat_8h.html  asprintf-compat_8h_source.html  assert_8h_source.html  bench__user_8cpp.html  cairo-deprecated_8h.js  cairo-features_8h.js  cairo-features_8h_source.html  cairo-ft_8h.html  cairo-ft_8h_source.html  cairo-gobject_8h_source.html  cairo-pdf_8h_source.html  cairo-ps_8h.js  cairo-ps_8h_source.html  cairo-script-interpreter_8h_source.html  cairo-script_8h.html  cairo-svg_8h_source.html  cairo-tee_8h.html  cairo-version_8h.js  cairo-version_8h_source.html  cairo-xcb_8h.html  cairo-xcb_8h.js  cairo-xlib-xrender_8h.html  cairo-xlib_8h.html  cairo-xlib_8h.js  cairo_8h.js  cairo_8h_source.html  capabilities_8h.html  capabilities_8h_source.html  (+4107 more)
.github/workflows/: c-checks.yml  deploy-docs.yml
c/: .clang-tidy  2xpcmdrzviw89gzpf8p7l7691wk51i89-criterion-2_84_82-dev_2include_2criterion_2options_8h.html  2xpcmdrzviw89gzpf8p7l7691wk51i89-criterion-2_84_82-dev_2include_2criterion_2options_8h.js  2xpcmdrzviw89gzpf8p7l7691wk51i89-criterion-2_84_82-dev_2include_2criterion_2options_8h_source.html  CivetServer_8cpp.html  CivetServer_8cpp.js  CivetServer_8cpp_source.html  CivetServer_8h.html  CivetServer_8h_source.html  LuaXML__lib_8c.html  LuaXML__lib_8c_source.html  LuaXML__lib_8h.html  LuaXML__lib_8h.js  LuaXML__lib_8h_source.html  Makefile  Makefile.gcc  README.md  README_8md.html  abort_8h.html  abort_8h_source.html  all_8c.html  all_8c_source.html  alloc_8h.html  alloc_8h.js  alloc_8h_source.html  annotated.html  annotated_dup.js  asprintf-compat_8h.html  asprintf-compat_8h.js  asprintf-compat_8h_source.html  assert_8h.html  assert_8h.js  assert_8h_source.html  bench__user_8cpp.html  bench__user_8cpp.js  bench__user_8cpp_source.html  c_2README_8md.html  cairo-deprecated_8h.html  cairo-deprecated_8h_source.html  cairo-features_8h.html  (+8091 more)
c++/: Makefile  flake.nix  meson.build
c++/nix/devShells/: default.nix  zsh-config.nix
c++/src/: gui.cpp  main.cpp  server.cpp  server.hpp  style.css  user.cpp  user.hpp
c/benchmarks/: bench_user.cpp
c/docs/: Doxyfile  build.sh
c/flatpak/: bundle-nix-environment-dependencies.sh  manifest.json  org.example.GithubUserFetcher.desktop  org.example.GithubUserFetcher.json  org.example.GithubUserFetcher.metainfo.xml  prepare-nix-deps.sh
c/nix/devShells/: default.nix  zsh-config.nix
c/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+147 more)
c/src/: gui.c  main.c  server.c  server.h  style.css  user.c  user.h
c/tests/: test_user.c
search/: all_14.js  all_15.js  all_16.js  all_18.js  all_7.js  all_8.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_16.js  classes_2.js  classes_8.js  classes_9.js  defines_0.js  defines_12.js  defines_13.js  defines_18.js  defines_3.js  defines_5.js  defines_6.js  defines_9.js  defines_c.js  defines_f.js  enums_0.js  enums_10.js  enums_3.js  enums_4.js  enums_a.js  enums_c.js  enumvalues_0.js  enumvalues_10.js  enumvalues_13.js  enumvalues_2.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_9.js  enumvalues_a.js  (+42 more)
